generating int for BizzFuzz

--- a/users_base/templates/index.html
+++ b/users_base/templates/index.html
@@ -19,7 +19,7 @@
             <td>{{object.last_name}}</td>
             <td>{{object.birthday}}</td>
             <td>{{object.random_number}}</td>
-            <td><a href="/remove?id={{object.id}}">Remove</a> | <a href="/edit?id={{object.id}}">Edit</a>
+            <td><a href="/edit?id={{object.id}}">Edit</a> | <a href="/remove?id={{object.id}}">Remove</a></td>
           </tr>
           {% endfor %}
       </table>
