--- a/users_base/templates/base.html
+++ b/users_base/templates/base.html
@@ -39,6 +39,7 @@
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Options <span class="caret"></span></a>
               <ul class="dropdown-menu">
                 <li><a href="/add">Add user</a></li>
+                <li><a href="/generate">Generate CSV</a></li>
               </ul>
             </li>
           </ul>
