--- a/users_base/templates/edit.html
+++ b/users_base/templates/edit.html
@@ -7,22 +7,26 @@
         <hr/>
         <form method="post" class="form-horizontal">
             {% csrf_token %}
+            {{ form.non_field_errors }}
           <div class="form-group">
             <label class="col-sm-2 control-label">First name</label>
             <div class="col-sm-10">
               {{form.first_name}}
+              {{form.first_name.errors}}
             </div>
           </div>
           <div class="form-group">
             <label class="col-sm-2 control-label">Last name</label>
             <div class="col-sm-10">
               {{form.last_name}}
+              {{form.last_name.errors}}
             </div>
           </div>
           <div class="form-group">
             <label class="col-sm-2 control-label">Birthday</label>
             <div class="col-sm-10">
               {{form.birthday}}
+              {{form.birthday.errors}}
             </div>
           </div>
           <div class="form-group">
